# lying-robots-in-swarm

./: .gitignore  CMakeLists.txt  README.md  experiments.sh  submit_jobs.sh  test.sh
buzz/: Algo1_basic_pattern_recognition.bzz  Algo2_average_belief.bzz  Algo2_average_belief.bzz1  Algo2_average_belief_limited_comm.bzz  Algo2_average_belief_limited_comm.bzz1  Algo3_SSR.bzz  Algo3_SSR.bzz1  Algo3_SSR_limited_comm.bzz  Algo3_SSR_limited_comm.bzz1  CMakeLists.txt  bad_fun.bzz  belief.bzz  good_fun.bzz  main.bzz  motion.bzz
experiments/: foraging.argos  foraging_run.argos  foraging_temp.argos  pattern.argos  pattern_run.argos  pattern_temp.argos
loop_functions/: CMakeLists.txt
loop_functions/pattern_loop_functions/: CMakeLists.txt  pattern_loop_functions.cpp  pattern_loop_functions.h
visualisation_scripts/: multi_hist.py  plot_data.py  plotting.ipynb  sample boxplot.ipynb
